--- a/gameoflife-core/pom.xml
+++ b/gameoflife-core/pom.xml
@@ -52,6 +52,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <formats>
+                        <format>xml</format>
+                        <format>html</format>
+                    </formats>
+                </configuration>
+            </plugin>			
 		</plugins>			
 	</build>
     <reporting>
